# oxide-communityedtion-v8.4.9

./: Cargo.toml  LICENSE  README.md  banner  build.rs
cgi_database/: oxide_tests.db.enc
hypersecurity/: Cargo.toml
hypersecurity/src/: lib.rs
oxide-proxy/: Cargo.toml
oxide-proxy/src/: lib.rs
src/: agent.rs  crawls.rs  db.rs  filter.rs  hybrid.rs  lib.rs  main.rs  recon.rs
src/advanced/: api_fuzzer.rs  cache.rs  cluster.rs  crawler_js.rs  evasion.rs  ml_detector.rs  mod.rs  plugin.rs  rate_limiter.rs  session.rs  websocket.rs
src/ai/: exploit_analyzer.rs  mod.rs  pattern_learner.rs  payload_mutator.rs  response_analyzer.rs
src/cli/: args.rs  colors.rs  config.rs  display.rs  mod.rs  output.rs  parser.rs  progress.rs  spinner.rs
src/core/: coordinator.rs  dispatcher.rs  engine.rs  mod.rs  scanner.rs  worker.rs
src/detection/: analyzer.rs  behavior.rs  confirm.rs  matcher.rs  mod.rs  signatures.rs  timing.rs
src/http/: client.rs  cookies.rs  headers.rs  mod.rs  proxy_loader.rs  redirect.rs  request.rs  response.rs  tls.rs  useragents.rs
src/insta/: mod.rs
src/payload/: command_injection.rs  encoder.rs  fuzzer.rs  generator.rs  lfi.rs  mod.rs  mutator.rs  sql_injection.rs  xss.rs
src/report/: csv.rs  generator.rs  html.rs  json.rs  mod.rs  xml.rs
src/scanner/: blind_sqli_scanner.rs  cmd_injection_scanner.rs  common_app_scanner.rs  cors_scanner.rs  db_fingerprinter.rs  default_creds_scanner.rs  lfi_scanner.rs  mod.rs  path_traversal_scanner.rs  precision.rs  sqli_scanner.rs  tls_scanner.rs  xss_scanner.rs
src/session_hijack/: mod.rs
src/utils/: downloader.rs  mod.rs  time.rs  url.rs
src/zero_day/: anomaly.rs  baseline.rs  classifier.rs  engine.rs  features.rs  mod.rs  trainer.rs
