[package]
name = "oxide-proxy"
version = "8.4.9"
edition = "2021"
authors = ["khaninkali | HyperSecurityLabs"]
description = "OXIDE Proxy Library — proxy routing, rotation, and authentication"
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
